# Reversi

./: README.md  pyproject.toml
src/Reversi/: ANSI.py  Definitions.py  Functions.py  Game.py  Objects.py  Players.py  Textures.py  Types.py
tests/: __init__.py  run.py
